--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -1,40 +1,102 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Expires" content="0" />
-	<script src="bundle.js" type="text/javascript"></script>
-</head>
+  <head>
+    <title>Dog Party!!!!!</title>
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <script src="bundle.js" type="text/javascript"></script>
+  </head>
 
-<body>
-	<div id="container">
+  <body>
+    <div id="container">
+      <!-- Start your code from here -->
+      <header>
+        <h1>Dog party</h1>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">What</a></li>
+            <li><a href="#">Facts</a></li>
+          </ul>
+        </nav>
+      </header>
 
-	<!-- Start your code from here -->
-	
+      <section id="hero">
+        <h2>A Site About Some Dogs</h2>
+        <img src="./assets/img/dog1-sq.jpg" alt="Hero Dog" />
+        <a href="#" class="btn">How to Dog</a>
+      </section>
+      <section>
+<article class="three-col" id="how">
+	<h3>How</h3>
+	<img src="./assets/img/dog2-sq.jpg" alt="first-img" />
+	<p>
+		Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table. Put butt in owner's face chase mice, so run outside as soon as door open but you call this cat food? stare at the wall, play with food and get confused by dust.
+	  </p>
+	  <a href="https://en.wikipedia.org/wiki/Dog" class="btn">How to Dog</a>
+</article>
 
-	<!-- End your code -->
 
-	</div>
 
-	<script type="text/javascript">
+<article class="three-col" id="what">
+	<h3>What</h3>
+	<img src="./assets/img/dog3-sq.jpg" alt="second-img" />
+	<p>
+		Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table. Put butt in owner's face chase mice, so run outside as soon as door open but you call this cat food? stare at the wall, play with food and get confused by dust.
+	  </p>
+	  <a href="https://en.wikipedia.org/wiki/Dog" class="btn">What is Dog</a>
+</article>
 
-	</script>
 
-</body>
-<script>
-/* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
-	// Get HTML head element
-	var head = document.getElementsByTagName('HEAD')[0]; 
-	// Create new link Element
-	var link = document.createElement('link');
-	// set the attributes for link element 
-	link.rel = 'stylesheet'; 
-	link.type = 'text/css';
-	link.href = './assignment4.css?v='+ new Date().getTime(); 
-	// Append link element to HTML head
-	head.appendChild(link); 
-	/* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
-</script> 
+
+<article class="three-col" id="facts">
+	<h3>Facts</h3>
+	<img src="./assets/img/dog4-sq.jpg" alt="third-img" />
+	<p>
+		Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table. Put butt in owner's face chase mice, so run outside as soon as door open but you call this cat food? stare at the wall, play with food and get confused by dust.
+	  </p>
+	  <a href="https://en.wikipedia.org/wiki/Dog" class="btn">Fact to Dog</a>
+</article>
+
+	  </section>
+      <footer>
+		<h4>
+			Learn About Dogs Online
+		</h4>  
+		<ul>
+			<li><img src="./assets/icon/facebook.svg"/></li>
+			<li><img src="./assets/icon/twitter.svg"/></li>
+			<li><img src="./assets/icon/instagram.svg"/></li>
+			<li><img src="./assets/icon/linkedin.svg"/></li>
+		  </ul>
+		  <a href="https://github.com/turingschool-examples">See this on Github</a>
+	  </footer>
+
+      <!-- End your code -->
+    </div>
+
+    <script type="text/javascript"></script>
+  </body>
+  <script>
+    /* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */
+    // Get HTML head element
+    var head = document.getElementsByTagName("HEAD")[0];
+    // Create new link Element
+    var link = document.createElement("link");
+    // set the attributes for link element
+    link.rel = "stylesheet";
+    link.type = "text/css";
+    link.href = "./assignment4.css?v=" + new Date().getTime();
+    // Append link element to HTML head
+    head.appendChild(link);
+    /* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */
+  </script>
 </html>
